docs/spec/grammar/conformance/accept/01-minimal-nodule.myc
// exercises: nodule header + use import
nodule signals.demo;

use core.binary;
