docs/spec/grammar/conformance/reject/01-no-nodule-header.myc
// rejected: a program must open with a nodule header; a bare item is not a program
use core.binary
